<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/EditProfileText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/col2"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/actionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:textColor="@color/col1"
        app:layout_constraintBottom_toBottomOf="@id/progressBar2"
        app:layout_constraintEnd_toEndOf="@id/progressBar2"
        app:layout_constraintStart_toStartOf="@id/progressBar2"
        app:layout_constraintTop_toTopOf="@id/progressBar2"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linLayoutEp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditProfileText"
        android:background="@color/white"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:srcCompat="@tools:sample/avatars"
                android:layout_marginStart="20dp" />

            <Button
                android:id="@+id/imgEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/col4"
                android:padding="5dp"
                android:text="@string/edit_image"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_rectangle"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="3dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_options"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="26sp"
            android:background="@drawable/text_rectangle"
            android:backgroundTint="@color/col1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="5dp"/>

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/grey"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/red"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>