<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity"
    android:background="@color/white">

    <EditText
        android:id="@+id/postTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createPost"
        android:hint="@string/what_s_in_your_mind"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_rectangle"
        android:minHeight="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/postBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTextInput"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/col3"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/createPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="6dp"
        android:textStyle="bold"
        android:textColor="@color/col2"
        android:text="@string/write_your_post_below"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />
</androidx.constraintlayout.widget.ConstraintLayout>